@@ -364,10 +364,12 @@ int main(int argc, char *argv[])
     QCommandLineOption debugToFileOption(QStringList() << "f" << "debug-to-file", QObject::tr("Log debug messages to %1").arg(Utils::cacheDir(QString(), true)+"cantata.log"), "", "false");
     QCommandLineOption noNetworkOption(QStringList() << "n" << "no-network", QObject::tr("Disable network access"), "", "false");
     QCommandLineOption collectionOption(QStringList() << "c" << "collection", QObject::tr("Collection name"), "collection", "");
+    QCommandLineOption fullscreenOption(QStringList() << "F" << "fullscreen", QObject::tr("Start full screen"), "", "false");
     cmdLineParser.addOption(debugOption);
     cmdLineParser.addOption(debugToFileOption);
     cmdLineParser.addOption(noNetworkOption);
     cmdLineParser.addOption(collectionOption);
+    cmdLineParser.addOption(fullscreenOption);
     cmdLineParser.process(app);
     QStringList files = cmdLineParser.positionalArguments();
 
@@ -435,6 +437,10 @@ int main(int argc, char *argv[])
     app.setActivationWindow(&mw);
     #endif // !defined Q_OS_MAC
     app.loadFiles(files);
+
+    if (cmdLineParser.isSet(fullscreenOption)) {
+        mw.fullScreen();
+    }
 
     return app.exec();
 }
